--- a/src/app/components/articles/location-article/location-article.component.html
+++ b/src/app/components/articles/location-article/location-article.component.html
@@ -1,50 +1,49 @@
 <div class="main">
-    <article *ngIf="location; else loading">
-        <!-- Heading -->
+    <article *ngIf="location; else loading" class="container">
         <app-edit-toggle 
         [isInUpdateState]=false 
         [link]="'update'"
-        ></app-edit-toggle>
+        ></app-edit-toggle>   
 
-        <!-- Marker Button -->
-        <a 
-        routerLink="{{constants.getRoutePath(router, 'marker-create', {
-                parent_location_name: location.parent_location_details.name,
-                location_name: location.name
-            })
-        }}"
-        class="btn btn-outline-secondary float-right mr-4"
-        [ngClass]="{'d-none': !userHasCreatePermission()}"
-        >
-            Add Marker
-        </a>
-
-        <h1 class="text-center">
-            {{ location.name }} 
-            <a 
-            *ngFor="let marker of location.marker_details" 
-            class="mx-1 no-underline" 
-            routerLink="{{constants.getRoutePath(router, 'marker', {
-                    parent_location_name: location.parent_location_details.name, 
-                    location_name: location.name, 
-                    map_name: marker.map
-                })
-            }}"
-            >
-                <i class="fa fa-{{marker.map_icon}} icon"></i>
-            </a>
-        </h1>
-
-        <!-- String indicating all parent_locations -->
-        <p *ngIf="location.parent_location_list.length > 0" class="text-center font-italic mb-5">
-            <span *ngFor="let loc of location.parent_location_list; let i = index"> 
-                <a routerLink="{{buildLocationRoute(i)}}">
-                    {{loc}}
+        <!-- Heading -->
+        <div class="row">
+            <h1 class="text-center col-12">
+                {{ location.name }} 
+                <a 
+                *ngFor="let marker of location.marker_details" 
+                class="mx-1 no-underline" 
+                routerLink="{{constants.getRoutePath(router, 'marker', {
+                        parent_location_name: location.parent_location_details.name, 
+                        location_name: location.name, 
+                        map_name: marker.map
+                    })
+                }}"
+                >
+                    <i 
+                    class="fa fa-{{marker.map_icon}} icon"
+                    [ngClass]="{'d-none': !userHasCreatePermission()}"
+                    routerLink="{{constants.getRoutePath(router, 'marker-create', {
+                            parent_location_name: location.parent_location_details.name,
+                            location_name: location.name
+                        })
+                    }}"
+                    ></i>
                 </a>
-                <i class="fa fa-arrow-right mx-1"></i>
-            </span>
-            {{location.name}}
-        </p>
+                <i class="fa fa-plus icon ml-3" title="Add Marker"></i>
+            </h1>
+
+            <!-- String indicating all parent_locations -->
+            <p *ngIf="location.parent_location_list.length > 0" class="text-center font-italic col-12 mb-5">
+                <span *ngFor="let loc of location.parent_location_list; let i = index"> 
+                    <a routerLink="{{buildLocationRoute(i)}}">
+                        {{loc}}
+                    </a>
+                    <i class="fa fa-arrow-right mx-1"></i>
+                </span>
+                {{location.name}}
+            </p>
+        </div>
+
 
         <!-- Image Gallery -->
         <app-image-gallery
@@ -79,28 +78,14 @@
             ></app-location-accordion>
         </div>
 
-        <!-- Delete Button -->
-        <app-delete-toggle 
-        [deleteMessage]="'Delete '+location.name+'?'" 
-        (deleteEvent)="deleteArticle()"
-        ></app-delete-toggle>
-
-
-        <!-- Return Buttons -->
-        <a routerLink="{{constants.getRoutePath(router, 'location-overview')}}" class="btn btn-outline-secondary mr-1">
-            Back to locations
-        </a>
-        <a 
-        *ngIf="location.parent_location_details.name && location.parent_location_details.name !== constants.NONE_STRING"
-        routerLink="{{constants.getRoutePath(router, 'location', {
-                parent_name: location.parent_location_details.parent_location, 
-                name: location.parent_location_details.name
-            })
-        }}"
-        class="btn btn-secondary"
-        >
-            Back to {{location.parent_location_details.name}}
-        </a>
+        <!-- Footer (Move to other Article + Delete Article) -->
+        <app-article-footer
+        (delete)="deleteArticle()"
+        [link]="constants.getRoutePath(router, 'location-overview')"
+        [label]="'Back to Locations'"
+        [deleteMessage]="'Delete '+location.name+'?'"
+        ></app-article-footer>
+        
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
