--- a/src/styles.scss
+++ b/src/styles.scss
@@ -401,6 +401,9 @@ div.ngb-dp-day .btn-light:hover{
 		padding: 2.5rem 1rem 2.5rem 1rem;
 	}
 	
+	.icon{
+		opacity: 1 !important;
+	}
 }
 
 @media(max-width: 768px){
