--- a/src/app/components/articles/rules/rules.component.html
+++ b/src/app/components/articles/rules/rules.component.html
@@ -1,17 +1,31 @@
 <div class="main">
-    <article *ngIf="rules; else loading">
-        <h1 class="text-center">Rules</h1>
-        <div *ngFor="let rule of rules; let i = index" class="card mb-3 px-4 pt-3 pb-1">
-            <h5 class="pointer" (click)="togglePanel(i)"> 
-                {{ rule.name }} 
+    <article *ngIf="rules; else loading" class="container">
+        <!-- Heading -->
+        <div class="row">
+            <h1 class="text-center col">Rules</h1>
+        </div>
+
+        <!-- Rules -->
+        <div *ngFor="let rule of rules; let i = index" class="card row mb-3 px-4 pt-3 pb-1">
+            <!-- Rules Panel Heading -->
+            <h5 class="pointer col-12 justify-content-between d-flex align-items-center" (click)="togglePanel(i)"> 
+                <span>{{ rule.name }}</span>
                 <i [ngClass]="{'fa icon float-right': true, 'fa-plus': panelIsOpen(i), 'fa-minus': !panelIsOpen(i)}"></i>
             </h5>
-            <div [ngbCollapse]="panelIsOpen(i)">
+            <!-- Rules Panel Content -->
+            <div class="col-12" [ngbCollapse]="panelIsOpen(i)">
                 <hr class="white-separator">
                 <div [innerHTML]="rule.description"></div>
             </div>
         </div>
-        <div class="btn btn-secondary" routerLink="{{constants.getRoutePath(router, 'home1')}}">Back To Frontpage</div>
+
+        <!-- Button to Frontpage -->
+        <div class="row mt-5">
+            <div class="btn btn-secondary col-md-3" routerLink="{{constants.getRoutePath(router, 'home1')}}">
+                Back To Frontpage
+            </div>
+        </div>
+
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
