--- a/src/app/components/articles/search/search.component.html
+++ b/src/app/components/articles/search/search.component.html
@@ -1,23 +1,41 @@
 <div class="main">
-    <article *ngIf="articles; else loading">
+    <article *ngIf="articles; else loading" class="container">
          <!-- Heading -->
-         <h1 class="text-center">Search Results</h1>
+         <div class="row">
+            <h1 class="text-center col">Search Results</h1>
+         </div>
+
          <app-colored-sidebar-legend></app-colored-sidebar-legend>
          
         <!-- Article List -->
         <div class="my-3">
-            <a routerLink="{{article.getAbsoluteRouterUrl()}}" 
-               *ngFor="let article of articles"
-               [ngClass]="'card flex-row align-items-center sidebar-border my-2 ' + sidebarColor(article.article_type)">
+            <a 
+            routerLink="{{article.getAbsoluteRouterUrl()}}" 
+            *ngFor="let article of articles"
+            [ngClass]="'card flex-row align-items-center sidebar-border py-2 row ' + sidebarColor(article.article_type)"
+            >
                
-                <div class="d-flex flex-row align-items-center py-2 w-100">
-                    <div class="mx-3 text-center flex-1"> <h5><strong>{{article.name}}</strong></h5></div>
-                    <div class="flex-3 pr-3 font-size-16">{{article.description}}</div>
+                <!-- Article Name -->
+                <div class="col-md-3 col-4 text-center">
+                        <h5><strong>{{article.name}}</strong></h5>
+                </div>
+                
+                <!-- Article Text -->
+                <div class="col-md-9 col-8 font-size-16">
+                    {{article.description}}
                 </div>
             </a>
         </div>
 
-        <div class="btn btn-secondary" routerLink="{{constants.getRoutePath(router, 'home1')}}">Back To Frontpage</div>
+        <!-- Footer -->
+        <div class="row">
+            <div 
+            class="btn btn-secondary col-md-3" 
+            routerLink="{{constants.getRoutePath(router, 'home1')}}"
+            >
+                Back To Frontpage
+            </div>
+        </div>
     </article>
     <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
